--- a/files/global.html
+++ b/files/global.html
@@ -52,7 +52,7 @@
 
     <div class="container">
       <div class="maincontainer">
-        <h1>Global Initiatives</h1>
+        <h1 class="page-title">Global Initiatives</h1>
         <div class="row mission">
           <div class="col-lg-8">
               
@@ -72,14 +72,12 @@
 
           </div>
           <div class="col-lg-4 initimg">
-            <img class="img-rounded img-responsive" src="assets/images/hongkong3.jpg">
-            <img class="img-rounded img-responsive" src="assets/images/nicaragua2.jpg">
+            <img class="img-responsive" src="assets/images/hongkong3.jpg">
+            <img class="img-responsive" src="assets/images/nicaragua2.jpg">
 
           </div>
         </div>
       </div>
-
- <hr class="featurette-divider">
 
     </div><!-- /.container -->
 
