--- a/files/initiatives.html
+++ b/files/initiatives.html
@@ -52,17 +52,17 @@
 
     <div class="container">
       <div class="maincontainer">
-        <h1>Our Initiatives</h1>
+        <h1 class="page-title">Our Initiatives</h1>
         <div class="row mission">
-          <div class="col-lg-6 initiatives" id="local">
-            <h2 id="localtitle">Local Projects</h2>
-            <img id="localimg" class="img-rounded img-responsive" src="assets/images/local3.jpg">
-            <p style="padding-top: 5px;">Read about local initiatives.</p>
+          <div class="col-lg-6 call-to-action our-initiatives">
+            <a class="cover" id="local" href="local.html">
+              <span>Local Projects</span>
+            </a>
           </div>
-          <div class="col-lg-6 initiatives" id="global">
-            <h2 id="globaltitle">Global Projects</h2>
-            <img id="globalimg" class="img-rounded img-responsive" src="assets/images/hongkong1.jpg">
-            <p style="padding-top: 5px;">Read about global initiatives.</p>
+          <div class="col-lg-6 call-to-action our-initiatives">
+            <a class="cover" id="global" href="global.html">
+              <span>Global Projects</span>
+            </a>
           </div>
         </div>
       </div>
