--- a/files/local.html
+++ b/files/local.html
@@ -32,7 +32,7 @@
             <span class="icon-bar"></span>
           </button>
 
-            <a class="navbar-brand" href="index.html"><div id="dlpmainheader" style="font-size: 1.3em; float: left;">Digital Literacy Project</div></div></a>
+            <a class="navbar-brand" href="index.html"><div id="dlpmainheader" style="font-size: 1.3em; float: left;">Digital Literacy Project</div></a>
 
             <div class="nav-collapse collapse">
               <ul class="nav navbar-nav">
@@ -52,7 +52,7 @@
 
     <div class="container">
       <div class="maincontainer">
-        <h1>Local Initiatives</h1>
+        <h1 class="page-title">Local Initiatives</h1>
         <div class="row mission">
           <div class="col-lg-8">
               <h3><a href="volunteer.html">Fall 2013</a></h3>
@@ -94,18 +94,16 @@
           </div>
         </div>
       </div>
+    </div>
 
- <hr class="featurette-divider">
-      <!-- FOOTER -->
-      <footer>
+    <!-- FOOTER -->
+    <footer>
+      <div class="container">
         <p class="pull-right"><a href="#">Back to top</a></p>
         <p>© 2013 Digital Literacy Project (DLP) Inc · <a href="terms.html">Terms and Privacy Policy</a></p>
         <p>We are a 501(c)(3) organization. Donations are tax deductible to the full extent allowable under IRS regulations.</p>
-      </footer>
-
-    </div><!-- /.container -->
-
-
+      </div>
+    </footer>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
