--- a/files/sponsors.html
+++ b/files/sponsors.html
@@ -51,8 +51,8 @@
 
     <div class="container">
       <div class="maincontainer">
+        <h1 class="page-title center">Thank you.</h2>
         <div class="row mission">
-          <h1 class="page-title" style="text-align: center;">Thank you.</h2>
           <br>
           <p>The Digital Literacy Project is extremely indebted to its sponsors. We would like to take this opportunity to sincerely thank all the individual donors and organizations that make DLP possible.</p>
 
