--- a/files/volunteer.html
+++ b/files/volunteer.html
@@ -52,15 +52,13 @@
 
     <div class="container">
       <div class="maincontainer">
-        <div class="row centered">
-          <h1 class="page-title">We need you.</h1>
-        </div>
+        <h1 class="page-title centered">We need you.</h1>
         <div class="row centered">
           <iframe width="800" height="451" src="http://www.youtube.com/embed/nKIu9yen5nc" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <div class="row mission centered">
-          <p id="make-a-difference">
+          <p class="make-a-difference">
             Make a difference in someone's life. Sign up to teach programming in local schools.
           </p>
         </div>
