--- a/files/mission.html
+++ b/files/mission.html
@@ -62,7 +62,7 @@
         <div class="row mission">
           <div class="col-lg-8">
               <h3>Summary</h3>
-              <p>The Digital Literacy Project is a non-profit organization at Harvard College that was founded in 2008 to promote digital literacy around the globe. We provide computers and computer classes for low-income schools, allowing disadvantaged students to develop valuable technology skills. We work locally in the Greater Boston area to teach computer science to students who have low accessibility to computers. We combine the supply of computers with on-site computer training both domestically and internationally, recently in Nicaragua and Hong Kong. Our twofold mission is to supply and educate, thereby enhancing digital literacy for students around the world.</p>
+              <p>The Digital Literacy Project is a non-profit organization at Harvard College that was founded in 2008. We provide computers and computer classes for low-income schools, allowing disadvantaged students to develop valuable technology skills. We work locally in the Greater Boston area to teach computer science to students who have low accessibility to computers. We combine the supply of computers with on-site computer training both domestically and internationally, recently in Nicaragua and Hong Kong. Our twofold mission is to supply and educate, thereby enhancing digital literacy for students around the world.</p>
               
               <h3>Our Motivation</h3>
 
