navbar highlights in red

--- a/files/local.html
+++ b/files/local.html
@@ -88,8 +88,8 @@
 
           </div>
           <div class="col-lg-4 initimg">
-            <img class="img-rounded img-responsive" src="assets/images/local4.jpg">
-            <img class="img-rounded img-responsive" src="assets/images/local1.jpg">
+            <img class="img-responsive" src="assets/images/local4.jpg">
+            <img class="img-responsive" src="assets/images/local1.jpg">
 
           </div>
         </div>
