--- a/files/donate.html
+++ b/files/donate.html
@@ -83,7 +83,7 @@
           <div id="donation-explanation" class="col-lg-12" style="text-align: center;">
             <h2 class="page-title">Where will your money go?</h2>
             <div class="col-lg-4">
-              <p>We strive to dedicate funds according to the breakdown at right.</p>
+              <p>We strive to dedicate funds according to the breakdown in the chart.</p>
 
               <p>However, sometimes we must respond to unexpected developments or take advantage of fortuitous opportunities. Thus, the above represents an ideal distribution of future spending rather than an actual spending history.</p>
 
